Grace/tests/gibbs/errors/t005.grace
// ERROR = L0004
var num := 7f
